<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.vitaz.devicetracker.ui.list.ListFragment"
        android:label="Devices"
        tools:layout="@layout/main_fragment" >
        <action
            android:id="@+id/action_mainFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.vitaz.devicetracker.ui.details.DetailsFragment"
        android:label="Details" />
</navigation>
