...
        <variable
            name="device"
            type="com.vitaz.devicetracker.networking.dto.Device" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
...
